2008-09-10  Gautier Portet  <kassoulet gmail com>
	* src/soundconverter.py: Add {Timestamp} filename template.
	  (thanks Mark)
	
2008-09-07  Gautier Portet  <kassoulet gmail com>
	* data/soundconverter.glade, src/soundconverter.py:
	  Added quality 10 to vorbis settings.
	  (thanks Juan Martin)

2008-09-03  Gautier Portet  <kassoulet gmail com>

	* data/soundconverter.glade, src/soundconverter.py:
	  Reverted useless flac quality setting.
	  Flac files were bigger than necessary because of
	  some default settings in gstreamer, causing both channels
	  to be encoded separately. I added the mid-side-stereo=true
	  option, and bumped encoding quality to max.

2008-08-31  Gautier Portet  <kassoulet gmail com>

	* data/soundconverter.glade, src/soundconverter.py:
	  Applied patch adding optional resampling from Francis.
	  Added flac experimental quality setting.
	   - flac quality do not seems to work with gstreamer ???
           - flac files created by gstreamer are huge...

2008-08-03  Gautier Portet  <kassoulet gmail com>
	* data/soundconverter.glade: Removed the 'translatable' field on stock
	  items.
	* po/pl/po: Updated Polish translation. (thanks Tomasz)


2008-08-03  Gautier Portet  <kassoulet gmail com>
	* src/soundconverter.py: Create-folders is also actived when using
	  same-as-input-folder.
	(fix #13915)
	Release 1.3.2

2008-08-01  Gautier Portet  <kassoulet gmail com>
	* src/soundconverter.py: Fix slash in tag. No more creating unwanted
	folders. This is just a fast hack, slash is just replaced by dash.
	(fix #14286)

2008-07-30  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Add AAC encoding support as it seems to be
	  fixed in gstreamer.
	  (thanks Ian) 
	  (fix #001653)

2008-07-29  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: use giosrc when available.
	* src/soundconverter.py: fix crash when gnomevfssink not present.
	  (fix #14184)

2008-07-26  Gautier Portet  <kassoulet gmail com>